@@ -131,6 +131,8 @@ $labels['unknown'] = 'unknown';
 $labels['unlimited'] = 'unlimited';
 $labels['quicksearch'] = 'Quick search';
 $labels['resetsearch'] = 'Reset search';
+$labels['searchmod']  = 'Search modifiers';
+$labels['msgtext']  = 'Entire message';
 $labels['openinextwin'] = 'Open in new window';
 $labels['compose'] = 'Compose a message';
 $labels['savemessage'] = 'Save this draft';
