@@ -161,6 +161,8 @@ $labels['unlimited']  = 'unlimited';
 
 $labels['quicksearch']  = 'Quick search';
 $labels['resetsearch']  = 'Reset search';
+$labels['searchmod']  = 'Search modifiers';
+$labels['msgtext']  = 'Entire message';
 
 $labels['openinextwin'] = 'Open in new window';
 
