@@ -347,12 +347,19 @@ table.records-table tr.unfocused td
   background: url('images/searchfield.gif') top left no-repeat;
 }
 
-#quicksearchbar a
+#searchreset
 {
   position: absolute;
   top: 3px;
   right: 4px;
   text-decoration: none;
+}
+
+#searchmod
+{
+ position: absolute;
+ top: 3px;
+ right: 162px;
 }
 
 #quicksearchbar img
